src/objects/ExecutionPlan__c.object
<CustomObject>
    <description>Execution Plans for Accounts</description>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Division__c</fullName>
        <formula>Relationship_Manager__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bespoke_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <description>Image indicator for active/ inactive plans</description>
        <formula>IMAGE( CASE( Active__c , &quot;ACTIVE&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;INACTIVE&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), &quot;flag&quot;)</formula>
        <label>Active Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF((Expiry_Date__c  &gt;=  TODAY() &amp;&amp;(Start_Date__c   &lt;=  TODAY()) &amp;&amp;  Approved__c =TRUE),
&quot;ACTIVE&quot;, &quot;INACTIVE&quot;)</formula>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Execution Plan has been Approved by the Territory Manager and the Plan is locked.</description>
        <inlineHelpText>If checked, the Execution Plan has been Approved by the Territory Manager and the plan is locked.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Outcome_F__c</fullName>
        <label>Desired Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Outcome__c</fullName>
        <label>National Strategic Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bespoke_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Activities__c</fullName>
        <label>Remaining Activities</label>
        <summarizedField>ExecutionPlanActivity__c.Remaining__c</summarizedField>
        <summaryForeignKey>ExecutionPlanActivity__c.ExecutionPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <label>Total Activities</label>
        <summarizedField>ExecutionPlanActivity__c.Quantity__c</summarizedField>
        <summaryForeignKey>ExecutionPlanActivity__c.ExecutionPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Execution Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Manager__c</columns>
        <columns>Active_Flag__c</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Execution_Plan_Templates</fullName>
        <columns>NAME</columns>
        <columns>Active_Flag__c</columns>
        <columns>Approved__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Execution Plan Templates</label>
        <sharedTo>
            <roleAndSubordinates>ANZ_SJM_Administrator</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Execution_Plans</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Manager__c</columns>
        <columns>Active_Flag__c</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Execution Plans</label>
        <sharedTo>
            <roleAndSubordinates>ANZ_SJM_Administrator</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Execution Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Execution Plans</pluralLabel>
    <recordTypes>
        <fullName>Account_Execution_Plan_Template</fullName>
        <active>true</active>
        <description>Execution Plan Template</description>
        <label>Account Execution Plan Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bespoke_Plan</fullName>
        <active>true</active>
        <description>Execution Plan for Accounts and Person Accounts</description>
        <label>Account Execution Plan</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EP_Approved_Name_Lock</fullName>
        <active>true</active>
        <errorConditionFormula>Approved__c = TRUE &amp;&amp;
 ISCHANGED(  Name  )</errorConditionFormula>
        <errorMessage>The Execution Plan Name can not be changed on an approved Plan.
Please contact the Execution Plan Territory Manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiry_cant_exceed_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &gt;  Expiry_Date__c</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>The Start Date must not be greater than the Expiry Date</errorMessage>
    </validationRules>
</CustomObject>